# moab-workflow

./: CMakeLists.txt  README.md  create-env.sh  env.yaml  henson_moab_runner.py  load-env.sh  repo.yaml  wilkins-config.yaml  wilkins-master.py  wilkins-run.sh
mfa/: repo.yaml
mfa-remap/: repo.yaml
mpas-o-scorpio/: repo.yaml
sample_data/: mpas_2d_source_p128.h5m
src/: CMakeLists.txt  actions.py  consumer.cpp  mesh_gen.cpp  prod-con.cpp  prod-con.hpp  producer.cpp
src/mpas-remap/: CMakeLists.txt  wilkins-config.yaml  wilkins-run.sh  wilkins-srun.sh
src/mpas-roms/: CMakeLists.txt  wilkins-config.yaml  wilkins-run.sh  wilkins-srun.sh
src/prod-con/: CMakeLists.txt  consumer.cpp  mesh_gen.cpp  prod-con_actions.py  producer.cpp  wilkins-config.yaml  wilkins-run.sh  wilkins-srun.sh
src/remap/: CMakeLists.txt  actions.py  mfa.cpp  mpas.cpp  remap_actions.py  roms.cpp  wilkins-config.yaml  wilkins-run.sh  wilkins-srun.sh
